# WAOOAW

./: .aider.chat.history.md  .aider.input.history  .copilotignore  .deployment-status  .env.docker  .env.example  .env.gateway  .gcp-permissions  .gitignore  .run1_initiated  .yamllint  AGENTS.md  AGENT_READINESS_ASSESSMENT.md  API_GATEWAY_TEST_PLAN.md  ARCHITECTURE_COMPLETE_V02_6.md  ARCHITECTURE_COMPLIANCE_AUDIT.md  ARCHITECTURE_PROPOSAL.md  Agent Architecture.md  BASELINE_V02_README.md  CLAUDE.md  CLEANUP_PLAN.md  CLEANUP_SUMMARY.md  COMPLETION_REPORT.md  CONTEXT_JAN21_EVENING.md  CONTEXT_NEXT_SESSION.md  CREATE_DEMO_CUSTOMER.sql  DB_UPDATES_INVESTIGATION_SUMMARY.md  DEMO_TEST_RESULTS.md  DEPLOYMENT_STATUS.md  DOCKER_BUILD_TEST_REPORT.md  DOCUMENTATION_INDEX.md  DOC_INDEX.md  Dockerfile.agent  Dockerfile.gateway  Dockerfile.mock-plant  FULL_STACK_INTEGRATION_COMPLETE.md  GAP_FILLING_COMPLETE.txt  GAP_RESOLUTION_SESSION_SUMMARY.md  GATEWAY_TESTING_COMPLETE.md  GATEWAY_TEST_RESULTS.md  (+79 more)
archive/backend/: Dockerfile  pyproject.toml  pytest.ini  requirements.txt
archive/backend/app/: __init__.py
archive/backend/app/api/: agents.py  queues.py  servicing.py  workflows.py
archive/backend/app/auth/: __init__.py  models.py  oauth.py
archive/backend/app/services/: agent_service.py
archive/backend/app/services/evolution/: meta_learning.py  problem_decomposition.py
archive/backend/app/services/personalization/: error_recovery.py  (+1 more)
archive/backend/migrations/: 007_add_identity_tables.sql  008_add_testing_tables.sql
archive/backend/tests/: conftest.py  test_health.py
(+3334 files in other folders)
